--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -8,7 +8,7 @@
       <%= render "shared/navbar" %>
     </header>
 
-    <main class="px-5 h-screen flex flex-col items-center justify-center ">
+    <main class="flex-grow ">
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
     <%= render "shared/footer" %>
