--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,11 +1,116 @@
-<h1>StaticPages#root</h1>
-<p>Home Page content</p>
+<!-- Start your project here-->
 
-<% if current_user %>
-<h2><%=current_user.email%></h2>
-<%= link_to "Edit Account", edit_user_registration_path %>
-<%= button_to "Logout", destroy_user_session_path, data: {turbo: "false"}, method: :delete %>
-<% else %>
-<%= link_to "Login", new_user_session_path %>
-<%= link_to "Create Account", new_user_registration_path %>
-<% end %>
+
+
+<!-- Jumbotron -->
+<div class="relative flex items-center justify-center py-16 bg-gray-50 sm:py-24 lg:py-32 mb-16">
+  <div class="absolute inset-0 bg-gradient-to-r from-gray-100 to-gray-700 dark:from-neutral-700 dark:to-neutral-800"
+       aria-hidden="true"></div>
+  <div class="relative px-4 sm:px-6 lg:px-8">
+    <div class="mx-auto text-lg text-center max-w-4xl">
+      <h1 class="text-4xl font-extrabold tracking-tight text-white sm:text-4xl lg:text-5xl">
+        <span class="block mb-6">I am building Healthy Habits</span>
+        <span class="block text-3xl">and it's awesome</span>
+      </h1>
+      <p class="mt-6 text-xl text-teal-50 max-w-3xl mb-6">
+        HealthyHabit is a fantastic application, offering you to track your habits and routine works, points out the improvement area
+        and suggests better approach for productivity and wellness. Its simple and focused to make you healthy.
+      </p>
+
+      <a role="button" href="/" 
+         class="inline-block rounded bg-neutral-50 px-7 pb-2.5 pt-3 text-sm font-medium uppercase leading-normal text-neutral-800 shadow-[0_4px_9px_-4px_#cbcbcb] transition duration-150 ease-in-out hover:bg-neutral-100 hover:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)] focus:bg-neutral-100 focus:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)] focus:outline-none focus:ring-0 active:bg-neutral-200 active:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(251,251,251,0.3)] dark:hover:shadow-[0_8px_9px_-4px_rgba(251,251,251,0.1),0_4px_18px_0_rgba(251,251,251,0.05)] dark:focus:shadow-[0_8px_9px_-4px_rgba(251,251,251,0.1),0_4px_18px_0_rgba(251,251,251,0.05)] dark:active:shadow-[0_8px_9px_-4px_rgba(251,251,251,0.1),0_4px_18px_0_rgba(251,251,251,0.05)]">
+        Learn more
+      </a>
+
+    </div>
+  </div>
+</div>
+
+<!-- Grid -->
+<div class="container mx-auto mb-16 px-5">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+
+    <!-- Column 1 -->
+    <div
+         class="block rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
+      <div class="relative overflow-hidden bg-cover bg-no-repeat" data-te-ripple-init data-te-ripple-color="light">
+        <img class="rounded-t-lg" src="https://tecdn.b-cdn.net/img/new/textures/small/1.jpg" alt="" />
+        <a href="#!">
+          <div
+               class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-[hsla(0,0%,98%,0.15)] bg-fixed opacity-0 transition duration-300 ease-in-out hover:opacity-100">
+          </div>
+        </a>
+      </div>
+      <div class="p-6">
+        <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+          Your Fitness
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+          A great adventure is ahead of us! Get ready for a fascinating journey into the world of happiness 🚀
+        </p>
+        <button type="button"
+                class="inline-block rounded bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200">
+          Count me in!
+        </button>
+      </div>
+    </div>
+    <!-- Column 1 -->
+
+    <!-- Column 2 -->
+    <div
+         class="block rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
+      <div class="relative overflow-hidden bg-cover bg-no-repeat" data-te-ripple-init data-te-ripple-color="light">
+        <img class="rounded-t-lg" src="https://tecdn.b-cdn.net/img/new/textures/small/103.jpg" alt="" />
+        <a href="#!">
+          <div
+               class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-[hsla(0,0%,98%,0.15)] bg-fixed opacity-0 transition duration-300 ease-in-out hover:opacity-100">
+          </div>
+        </a>
+      </div>
+      <div class="p-6">
+        <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+          Health and Habits
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+          We will explore the unknown lands of creating great interfaces and designing the perfect user experience
+        </p>
+        <button type="button"
+                class="inline-block rounded bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200">
+          Oh, I want it too
+        </button>
+      </div>
+    </div>
+    <!-- Column 2 -->
+
+    <!-- Column 3 -->
+    <div
+         class="block rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
+      <div class="relative overflow-hidden bg-cover bg-no-repeat" data-te-ripple-init data-te-ripple-color="light">
+        <img class="rounded-t-lg" src="https://tecdn.b-cdn.net/img/new/textures/small/56.jpg" alt="" />
+        <a href="#!">
+          <div
+               class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-[hsla(0,0%,98%,0.15)] bg-fixed opacity-0 transition duration-300 ease-in-out hover:opacity-100">
+          </div>
+        </a>
+      </div>
+      <div class="p-6">
+        <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
+          Explore Healthy Hobbies 
+        </h5>
+        <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
+          You know the saying that the future is today? There is no need to delay, let's start our journey
+        </p>
+
+        <button type="button"
+                class="inline-block rounded bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200">
+          Let's start!
+        </button>
+      </div>
+    </div>
+    <!-- Column 3 -->
+
+  </div>
+</div>
+
+
+<!-- End your project here-->
