--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  table { @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 }
+  thead { @apply text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400 }
+  th {@apply px-6 py-3 rounded-s-lg}
+  tr {@apply bg-white dark:bg-gray-800}
+  td {@apply px-6 py-3}
+}
