--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
       <%= render "shared/navbar" %>
     </header>
 
-    <main class="px-5 h-screen flex flex-col items-center justify-center ">
+    <main class="flex-grow">
+      <div class="ml-3">
       <%= content_for?(:content) ? yield(:content) : yield %>
+    </div>
     </main>
     <%= render "shared/footer" %>
   </body>
