--- a/app/views/workout_plans/_form.html.slim
+++ b/app/views/workout_plans/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: workout_plan, data: { turbo: "false" }, class: "max-w-sm mx-auto") do |form|
+= form_with(model: workout_plan, class: "max-w-sm mx-auto") do |form|
   - if @workout_plan_form.errors.any?
     div style="color: red"
       h2 = "#{pluralize(@workout_plan_form.errors.count, "error")} prohibited this workout_plan from being saved:"
