--- a/app/views/workout_plans/new.html.slim
+++ b/app/views/workout_plans/new.html.slim
@@ -1,8 +1,8 @@
-h1 New workout plan
+= turbo_frame_tag :workout_frame  
+  h1 New workout plan
+  == render "form", workout_plan: @workout_plan, option: option
 
-== render "form", workout_plan: @workout_plan, option: option
+  br
 
-br
-
-div
-  = link_to "Back to workout plans", workout_plans_path
+  div
+    = link_to "Back to workout plans", workout_plans_path
