chores!: add specs for controllers & respective correction

--- a/app/views/options/_form.html.slim
+++ b/app/views/options/_form.html.slim
@@ -12,7 +12,7 @@
 
   div
     = form.label :options, style: "display: block"
-    = form.text_field :options
+    = form.text_area :options, value: '{}'
 
   div
     = form.submit
